# graphiti

./: .env.example  .gitignore  README.md  chainlit_app.py  pyproject.toml  run.py
.chainlit/: config.toml
app/: __init__.py  application.py  config.py  main.py  models.py
app/services/: __init__.py  arcgis_client.py  arcgis_openai_llm_client.py  arcgis_runtime.py  compatible_neo4j_driver.py  graphiti_service.py  noop_cross_encoder.py  session_store.py
evaluation/: .gitignore  README.md  run_hotpotqa_beir.py
