[project]
name = "graphiti"
version = "0.1.0"
description = "Chainlit-based Graphiti RAG application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0,<3.0",
    "fastapi==0.115.14",
    "graphiti-core==0.29.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
eval = [
    "beir==2.2.0",
    "datasets==4.8.5",
    "pytrec-eval-terrier==0.5.10",
]

[tool.uv]
package = false